unpackaged/main/default/objects/AcctSeed__Time_Card_Period__c/fields/AcctSeed__Number_of_Related_Accounting_Periods__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Number_of_Related_Accounting_Periods__c</fullName>
    <inlineHelpText>A Time Card should be related to 1 or 2 accounting periods. If the Time Card Period start and end date both reside in the same accounting period then it should be related to 1 accounting period. If it crosses 2 accounting periods it should be 2.</inlineHelpText>
    <label>Number of Related Accounting Periods</label>
    <summaryForeignKey>AcctSeed__Time_Card_Accounting_Period__c.AcctSeed__Time_Card_Period__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>