unpackaged/main/default/objects/AcctSeed__Time_Card_Period__c/listViews/AcctSeed__All1.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All1</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Start_Date__c</columns>
    <columns>AcctSeed__End_Date__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Number_of_Related_Accounting_Periods__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>