unpackaged/main/default/objects/AcctSeed__Time_Card_Period__c/listViews/AcctSeed__All_Open.listView-meta.xml
<ListView>
    <fullName>AcctSeed__All_Open</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__Start_Date__c</columns>
    <columns>AcctSeed__End_Date__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>All Open</label>
    <language>en_US</language>
</ListView>