unpackaged/main/default/objects/AcctSeed__Time_Card_Period__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>AcctSeed__End_Date__c</columns>
    <columns>AcctSeed__Start_Date__c</columns>
    <columns>AcctSeed__Status__c</columns>
    <columns>AcctSeed__Number_of_Related_Accounting_Periods__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>All-Open</label>
    <language>en_US</language>
</ListView>